# python-package-project-template

./: .dockerignore  .docstr.yaml  .gitignore  Makefile  README.md  TODO.md  conftest.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
tests/: template.py
