[tool.poetry]
name = "${PACKAGE_NAME}"
version = "0.0.1"
description = "${DESCRIPTION}"
authors = ["${USERNAME} <${AUTHOR_EMAIL}>"]
packages = [
	{ include = "${PACKAGE_NAME}" },
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Operating System :: Linux",
]
homepage = "https://github.com/${USERNAME}/${PACKAGE_NAME}"
repository = "https://github.com/${USERNAME}/${PACKAGE_NAME}"


[tool.poetry.dependencies]
python = "^${PYTHON_VERSION}"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-xdist = "^2.5.0"
pytest-cases = "^3.6.8"
pytest-forked = "^1.4.0"
pytest-steps = "^1.8.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
